--- a/app/mision/mision.html
+++ b/app/mision/mision.html
@@ -3,17 +3,16 @@
     <h1>Nuestra Misi&oacute;n</h1>
     <div class="mision-container">
       <p>
-        Siendo un empresa de sistemas forjandose en los &uacute;ltimos a&ntilde;os, nuestra visi&oacute;n del
-        mercado es muy diferente de las empresas tradicionales Argentinas. Nuestro objetivo
-        es el servicio y servicio solo lo entendemos por entregar el producto, lo entedemos por
-        entregar el producto y establecer una relaci&oacute;n con el cliente de soporte y crecimiento.
+        Somos una empresa de sistemas forjada en los &uacute;ltimos años. Nuestra visi&oacute;n del mercado es muy diferente del
+        de las empresas tradicionales de servicios web. Entendemos servicio como entregar un producto con las &uacute;ltimas tercnolog&iacute;as
+        del mercado, y estableciendo una relaci&oacute;n de crecimiento y capacitaci&oacute;n con nuestros clientes.
       </p>
       <br>
       <p>
-        Las tecnolog&iacute;as crecen a pasos agigantados a&ntilde;o tras a&ntilde;o, y imposible manejar un
+        Las tecnolog&iacute;as crecen a pasos agigantados a&ntilde;o tras a&ntilde;o, y es imposible manejar un
         negocio propio y mantenerse informado de todos estos avances. Nosotros queremos ser
         tus asesores y socios en este crecimiento. Nos gusta aprender de tecnolog&iacute;a y ver
-        como aplicarla para que el d&iacute;a a d&iacute;a sea mas f&aacute;cil, mas llevadero y mas lucrativo para
+        como aplicarlas para que el d&iacute;a a d&iacute;a sea mas f&aacute;cil, mas llevadero y mas lucrativo para
         nuestros clientes. <strong>Tu crecimiento es nuestro objetivo.</strong>
       </p>
       <br>
