--- a/app/sabias/sabias.html
+++ b/app/sabias/sabias.html
@@ -6,41 +6,42 @@
                 <button ng-click="sabiasCtrl.playMovie();"
                         ng-if="sabiasCtrl.show_btn" class="btn-movie">{{sabiasCtrl.btn_titulo}}</button>
 
-                <video class="video-screen" ng-if="sabiasCtrl.movie == 1">
+                <video id="video1" class="video-screen" ng-if="sabiasCtrl.movie == 1">
                     <source src="movies/movie1.mov" >
                     Your browser does not support the <code>video</code> element.
                 </video>
-                <video class="video-screen" ng-if="sabiasCtrl.movie == 2">
-                    <source src="movies/movie2.mov" >
+
+                <video id="video2" class="video-screen" ng-if="sabiasCtrl.movie == 2">
+                    <source src="http://v2v.cc/~j/theora_testsuite/320x240.ogg" >
                     Your browser does not support the <code>video</code> element.
                 </video>
-                <video class="video-screen" ng-if="sabiasCtrl.movie == 3">
+
+                <video id="video3" class="video-screen" ng-if="sabiasCtrl.movie == 3">
                     <source src="movies/movie3.mov" >
                     Your browser does not support the <code>video</code> element.
                 </video>
-                <video class="video-screen" ng-if="sabiasCtrl.movie == 4">
-                    <source src="movies/movie4.mov" >
+
+                <video id="video4" class="video-screen" ng-if="sabiasCtrl.movie == 4">
+                    <source src="http://v2v.cc/~j/theora_testsuite/320x240.ogg" >
                     Your browser does not support the <code>video</code> element.
                 </video>
-                <video class="video-screen" ng-if="sabiasCtrl.movie == 5">
+
+                <video id="video5" class="video-screen" ng-if="sabiasCtrl.movie == 5">
                     <source src="movies/movie5.mov" >
                     Your browser does not support the <code>video</code> element.
                 </video>
-                <video class="video-screen" ng-if="sabiasCtrl.movie == 6">
-                    <source src="movies/movie6.mov" >
+
+                <video id="video6" class="video-screen" ng-if="sabiasCtrl.movie == 6">
+                    <source src="http://v2v.cc/~j/theora_testsuite/320x240.ogg" >
                     Your browser does not support the <code>video</code> element.
                 </video>
-                <video class="video-screen" ng-if="sabiasCtrl.movie == 7">
+
+                <video id="video7" class="video-screen" ng-if="sabiasCtrl.movie == 7">
                     <source src="movies/movie7.mov" >
                     Your browser does not support the <code>video</code> element.
                 </video>
 
             </div>
-
-            <!--div class="btn-chat">
-                <div class="arrow-up arrow-chat-margin"></div>
-                <button id="cotizar" ng-click="sabiasCtrl.nextMovie(1);">Siguiente</button>
-            </div-->
 
             <div class="slider-indicator">
                 <div class="slider_1" ng-class="{slider_selected:sabiasCtrl.slider_nro==1}"
