Mostrar los videos

--- a/app/cotizador/cotizador.html
+++ b/app/cotizador/cotizador.html
@@ -243,8 +243,8 @@
                 <div class="container-colum" style="flex: 1 1 auto;">
                     <div class="controls controls-margin">
                         <label>Fecha y hora de reunión</label>
-                        <input min-date="today;La fecha debe ser mayor a hoy" class="form-control"
-                               type="date" id="fecha_fin" ng-model="cotizadorCtrl.fecha_reunion">
+                        <input ac-validator min-date="today;La fecha debe ser mayor a hoy" class="form-control"
+                               type="date" id="fecha_reunion" ng-model="cotizadorCtrl.fecha_reunion">
                     </div>
                 </div>
             </div>
