--- a/app/contactanos/contacto.html
+++ b/app/contactanos/contacto.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="btn-action">
-                <div class="arrow-up arrow-contacto-margin"></div>
+                <div class="arrow-up arrow-contacto-margin" ng-class="{arrow_animate:contactoCtrl.enviando}"></div>
                 <!--a href="" ng-click="contactoCtrl.sendMail();">Enviar</a-->
                 <button id="contacto-enviar-mobile" ac-validator ng-click="contactoCtrl.sendMail();">Enviar</button>
             </div>
