--- a/app/index.html
+++ b/app/index.html
@@ -142,7 +142,7 @@
         var cb = function () {
             var l = document.createElement('link');
             l.rel = 'stylesheet';
-            l.href = 'stylesheets/screen.css';
+            l.href = 'stylesheets/screen.min.css';
             var h = document.getElementsByTagName('head')[0];
             h.parentNode.insertBefore(l, h);
         };
