--- a/app/sabias/sabias.html
+++ b/app/sabias/sabias.html
@@ -12,7 +12,7 @@
                 </video>
 
                 <video id="video2" class="video-screen" ng-if="sabiasCtrl.movie == 2">
-                    <source src="http://v2v.cc/~j/theora_testsuite/320x240.ogg" >
+                    <source src="movies/movie2.mov" >
                     Your browser does not support the <code>video</code> element.
                 </video>
 
@@ -22,7 +22,7 @@
                 </video>
 
                 <video id="video4" class="video-screen" ng-if="sabiasCtrl.movie == 4">
-                    <source src="http://v2v.cc/~j/theora_testsuite/320x240.ogg" >
+                    <source src="movies/movie4.mov" >
                     Your browser does not support the <code>video</code> element.
                 </video>
 
@@ -31,7 +31,7 @@
                     Your browser does not support the <code>video</code> element.
                 </video>
 
-                <video id="video6" class="video-screen" ng-if="sabiasCtrl.movie == 6">
+                <!--video id="video6" class="video-screen" ng-if="sabiasCtrl.movie == 6">
                     <source src="http://v2v.cc/~j/theora_testsuite/320x240.ogg" >
                     Your browser does not support the <code>video</code> element.
                 </video>
@@ -39,27 +39,27 @@
                 <video id="video7" class="video-screen" ng-if="sabiasCtrl.movie == 7">
                     <source src="movies/movie7.mov" >
                     Your browser does not support the <code>video</code> element.
-                </video>
+                </video-->
 
             </div>
 
             <div class="slider-indicator">
-                <div class="slider_1" ng-class="{slider_selected:sabiasCtrl.slider_nro==1}"
+                <div class="slider_1" ng-class="{slider_selected:sabiasCtrl.movie==1}"
                      ng-click="sabiasCtrl.nextMovie(1);" ></div>
-                <div class="slider_2" ng-class="{slider_selected:sabiasCtrl.slider_nro==2}"
+                <div class="slider_2" ng-class="{slider_selected:sabiasCtrl.movie==2}"
                      ng-click="sabiasCtrl.nextMovie(2);" ></div>
-                <div class="slider_3" ng-class="{slider_selected:sabiasCtrl.slider_nro==3}"
+                <div class="slider_3" ng-class="{slider_selected:sabiasCtrl.movie==3}"
                      ng-click="sabiasCtrl.nextMovie(3);" ></div>
-                <div class="slider_4" ng-class="{slider_selected:sabiasCtrl.slider_nro==4}"
+                <div class="slider_4" ng-class="{slider_selected:sabiasCtrl.movie==4}"
                      ng-click="sabiasCtrl.nextMovie(4);" ></div>
-                <div class="slider_5" ng-class="{slider_selected:sabiasCtrl.slider_nro==5}"
+                <div class="slider_5" ng-class="{slider_selected:sabiasCtrl.movie==5}"
                      ng-click="sabiasCtrl.nextMovie(5);" ></div>
-                <div class="slider_6" ng-class="{slider_selected:sabiasCtrl.slider_nro==6}"
+                <!--div class="slider_6" ng-class="{slider_selected:sabiasCtrl.movie==6}"
                      ng-click="sabiasCtrl.nextMovie(6);" ></div>
-                <div class="slider_7" ng-class="{slider_selected:sabiasCtrl.slider_nro==7}"
-                     ng-click="sabiasCtrl.nextMovie(7);" ></div>
+                <div class="slider_7" ng-class="{slider_selected:sabiasCtrl.movie==7}"
+                     ng-click="sabiasCtrl.nextMovie(7);" ></div-->
             </div>
-            <div>{{sabiasCtrl.titulo_video}}</div>
+            <!--div>{{sabiasCtrl.titulo_video}}</div-->
         </div>
     </div>
 </div>
