agrego los .min.js

--- a/app/mision/mision.html
+++ b/app/mision/mision.html
@@ -23,7 +23,7 @@
     </div>
     <div class="back">
       <div class="arrow-left"></div>
-      <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/main'});">Volver</a>
+      <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/#'});">Volver</a>
     </div>
   </div>
 </div>
