--- a/app/cotizador/cotizador.html
+++ b/app/cotizador/cotizador.html
@@ -182,7 +182,7 @@
                         <input type="checkbox" ng-model="cotizadorCtrl.extension_1" ><span class="">.com / .net /</span>
                     </div>
                     <div class="controls controls-margin">
-                        <input type="checkbox" ng-model="cotizadorCtrl.extension_2" ><span class="">.com.do / .do</span>
+                        <input type="checkbox" ng-model="cotizadorCtrl.extension_2" ><span class="">.com.ar / .org</span>
                     </div>
                     <div class="controls controls-margin">
                         <input type="checkbox" ng-model="cotizadorCtrl.extension_3" ><span class="">otro</span>
