--- a/app/hacemos/hacemos.html
+++ b/app/hacemos/hacemos.html
@@ -6,7 +6,10 @@
 
             <div ng-class="{'slider-selected':hacemosCtrl.slider_nro == 1}" class="slider-container">
                 <div class="slider-alto">
+                    <div>
+                    <img src="images/comercio.png" alt="" height="80">
                     <h3 class="color-terciary">Ecommerce, Mcommerce y Comercio Social:</h3>
+                    </div>
                     <p>El comercio electrónico, también conocido como e-commerce (electronic commerce en inglés), consiste en la compra y venta de productos o de servicios a través de medios electrónicos.</p>
                     <br>
                     <p>La mayor parte del comercio electrónico consiste en la compra y venta de productos o servicios entre personas y empresas, sin embargo un porcentaje considerable del comercio electrónico consiste en la adquisición de artículos virtuales (software y derivados en su mayoría), tales como el acceso a contenido "premium" de un sitio web..</p>
@@ -20,6 +23,8 @@
             </div>
             <div ng-class="{'slider-selected':hacemosCtrl.slider_nro == 2}" class="slider-container">
                 <div class="slider-alto">
+                    <img src="images/institucional.png" alt="" height="80">
+
                     <h3 class="color-primary">Institucionales:</h3>
                     <p>Los sitios web institucionales están desarrollados para brindar al usuario información concisa sobre los datos de la empresa, a lo que se dedica y las formas de contacto.</p>
                     <br>
@@ -30,12 +35,14 @@
             </div>
             <div ng-class="{'slider-selected':hacemosCtrl.slider_nro == 3}" class="slider-container">
                 <div class="slider-alto">
+                    <img src="images/gestion.png" alt="" height="80">
                     <h3 class="color-terciary">Sistemas de gestión:</h3>
                     <p>Un sistema robusto y completo que permite realizar la gestión de ventas, stock, clientes y movimientos contables. Un sistema en evolución constante que crece de acuerdo a las necesidades de nuestros clientes.</p>
                 </div>
             </div>
             <div ng-class="{'slider-selected':hacemosCtrl.slider_nro == 4}" class="slider-container">
                 <div class="slider-alto">
+                    <img src="images/desarrollos.png" alt="" height="80">
                     <h3 class="color-primary">Desarrollos a medida:</h3>
                     <p>Si tenés una idea, nosotros te damos un plan para implementarla de una forma seria y aplicando todas las nuevas tecnologias del mercado.</p>
                     <br>
@@ -46,6 +53,8 @@
             </div>
             <div ng-class="{'slider-selected':hacemosCtrl.slider_nro == 5}" class="slider-container">
                 <div class="slider-alto">
+                    <img src="images/analiticas.png" alt="" height="80">
+
                     <h3 class="color-terciary">Analiticas:</h3>
                     <p>Te ofrecemos las mejores herramientas para que puedas ver que está pasando en tu sitio, las páginas más visitadas, los países, los idiomas, los gustos de tus usuarios y mucho más.</p>
                 </div>
