--- a/app/mision/mision.html
+++ b/app/mision/mision.html
@@ -3,8 +3,8 @@
     <h1>Nuestra Misi&oacute;n</h1>
     <div class="mision-container">
       <p>
-        Somos una empresa de sistemas forjada en los &uacute;ltimos años. Nuestra visi&oacute;n del mercado es muy diferente del
-        de las empresas tradicionales de servicios web. Entendemos servicio como entregar un producto con las &uacute;ltimas tercnolog&iacute;as
+        Somos una empresa de sistemas forjada en los &uacute;ltimos años. Nuestra visi&oacute;n del mercado es muy diferente a la de las
+        empresas tradicionales de servicios web. Entendemos servicio como entregar un producto con las &uacute;ltimas tercnolog&iacute;as
         del mercado, y estableciendo una relaci&oacute;n de crecimiento y capacitaci&oacute;n con nuestros clientes.
       </p>
       <p>
