--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,14 @@
   <meta name="theme-color" content="#ffffff">
 
     <style>
-
+        .loader-img {
+            height:150px;
+        }
+        @media (min-width: 800px) {
+            .loader-img {
+                height:250px;
+            }
+        }
         #ac-loader {
             display: flex;
             flex-direction: column;
@@ -449,7 +456,7 @@
 <body ng-controller="AppController as appCtrl" style="position: relative;">
 
 <div ng-if="!appCtrl.hideLoader" id="ac-loader">
-    <img src="images/loader-logo.png" alt="" height="250">
+    <img src="images/loader-logo.png" alt="" class="loader-img" >
     <span id="loader-loading">Loading...</span>
     <div id="border-rad">
         <div id="loader-container">
