Mojoras en los eventos del checkbox

--- a/app/cotizador/cotizador.html
+++ b/app/cotizador/cotizador.html
@@ -40,10 +40,12 @@
             <div class="container-row">
                 <div class="container-colum" style="flex: 1 1 auto;">
                     <div class="controls controls-margin">
-                        <input type="checkbox" ng-model="cotizadorCtrl.desarrolloweb" ><span class="" ng-click="cotizadorCtrl.desarrolloweb = (cotizadorCtrl.desarrolloweb) ? false : true">Diseño de Página Web</span>
+                        <input type="checkbox" ng-model="cotizadorCtrl.desarrolloweb" >
+                        <span class="" ng-click="cotizadorCtrl.desarrolloweb = (cotizadorCtrl.desarrolloweb) ? false : true">Diseño de Página Web</span>
                     </div>
                     <div class="controls controls-margin">
-                        <input type="checkbox" ng-model="cotizadorCtrl.hosting" ><span class="" ng-click="cotizadorCtrl.hosting = (cotizadorCtrl.hosting) ? false : true">Hosting</span>
+                        <input type="checkbox" ng-model="cotizadorCtrl.hosting" >
+                        <span class="" ng-click="cotizadorCtrl.hosting = (cotizadorCtrl.hosting) ? false : true">Hosting</span>
                     </div>
                     <!--div class="controls controls-margin">
                         <input type="checkbox" ng-model="cotizadorCtrl.logotipos" ><span class="">Diseño de Logotipos</span>
@@ -51,10 +53,12 @@
                 </div>
                 <div class="container-colum" style="flex: 1 1 auto;">
                     <div class="controls controls-margin">
-                        <input type="checkbox" ng-model="cotizadorCtrl.desarrollografico" ><span class="" ng-click="cotizadorCtrl.desarrollografico = (cotizadorCtrl.desarrollografico) ? false : true">Diseño Gráfico</span>
+                        <input type="checkbox" ng-model="cotizadorCtrl.desarrollografico" >
+                        <span class="" ng-click="cotizadorCtrl.desarrollografico = (cotizadorCtrl.desarrollografico) ? false : true">Diseño Gráfico</span>
                     </div>
                     <div class="controls controls-margin">
-                        <input type="checkbox" ng-model="cotizadorCtrl.dominio" ><span class="" ng-click="cotizadorCtrl.dominio = (cotizadorCtrl.dominio) ? false : true">Registro de Dominio</span>
+                        <input type="checkbox" ng-model="cotizadorCtrl.dominio" >
+                        <span class="" ng-click="cotizadorCtrl.dominio = (cotizadorCtrl.dominio) ? false : true">Registro de Dominio</span>
                     </div>
                     <!--div class="controls controls-margin">
                         <input type="checkbox" ng-model="cotizadorCtrl.impresion" ><span class="">Impresión</span>
@@ -67,13 +71,16 @@
                 <div class="container-row" >
                     <div class="container-colum">
                         <div class="controls controls-margin">
-                            <input type="radio" ng-model="cotizadorCtrl.nuevapagina" value="1"><span class="">Diseño de una nueva página web</span>
+                            <input type="radio" ng-model="cotizadorCtrl.nuevapagina" value="1">
+                            <span class="">Diseño de una nueva página web</span>
                         </div>
                         <div class="controls controls-margin">
-                            <input type="radio" ng-model="cotizadorCtrl.nuevapagina" value="2"><span class="">Rediseño de su página actual</span>
+                            <input type="radio" ng-model="cotizadorCtrl.nuevapagina" value="2">
+                            <span class="">Rediseño de su página actual</span>
                         </div>
                         <div class="controls controls-margin">
-                            <input type="radio" ng-model="cotizadorCtrl.nuevapagina" value="3"><span class="">Servicio de Mantenimiento</span>
+                            <input type="radio" ng-model="cotizadorCtrl.nuevapagina" value="3">
+                            <span class="">Servicio de Mantenimiento</span>
                         </div>
                     </div>
                 </div>
@@ -88,44 +95,56 @@
                 <div class="container-row">
                     <div class="container-colum" style="flex: 1 1 auto;">
                         <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.slider_fijo" ><span class="">Slider Fijo</span>
+                            <input type="checkbox" ng-model="cotizadorCtrl.slider_fijo" >
+                            <span class="" ng-click="cotizadorCtrl.slider_fijo = (cotizadorCtrl.slider_fijo) ? false : true">Slider Fijo</span>
                         </div>
                         <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.slider_administrable" ><span class="">Slider Autoadministrable</span>
+                            <input type="checkbox" ng-model="cotizadorCtrl.slider_administrable" >
+                            <span class="" ng-click="cotizadorCtrl.slider_administrable = (cotizadorCtrl.slider_administrable) ? false : true">Slider Autoadministrable</span>
                         </div>
                         <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.contactos" ><span class="">Contactos</span>
+                            <input type="checkbox" ng-model="cotizadorCtrl.contactos" >
+                            <span class="" ng-click="cotizadorCtrl.contactos = (cotizadorCtrl.contactos) ? false : true">Contactos</span>
                         </div>
                         <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.empresa_info" ><span class="">Información de Empresas</span>
-                        </div>
-                    </div>
-                    <div class="container-colum" style="flex: 1 1 auto;">
-                        <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.producto_info" ><span class="">Información de Productos</span>
-                        </div>
-                        <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.multipaginas" ><span class="">Multipágina</span>
-                        </div>
-                        <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.noticias" ><span class="">Noticias</span>
-                        </div>
-                        <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.usuarios" ><span class="">Usuarios</span>
+                            <input type="checkbox" ng-model="cotizadorCtrl.empresa_info" >
+                            <span class="" ng-click="cotizadorCtrl.empresa_info = (cotizadorCtrl.empresa_info) ? false : true">Información de Empresas</span>
                         </div>
                     </div>
                     <div class="container-colum" style="flex: 1 1 auto;">
                         <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.ecommerce" ><span class="">Ecommerce</span>
+                            <input type="checkbox" ng-model="cotizadorCtrl.producto_info" >
+                            <span class="" ng-click="cotizadorCtrl.producto_info = (cotizadorCtrl.producto_info) ? false : true">Información de Productos</span>
                         </div>
                         <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.chat" ><span class="">Chat en línea</span>
+                            <input type="checkbox" ng-model="cotizadorCtrl.multipaginas" >
+                            <span class="" ng-click="cotizadorCtrl.multipaginas = (cotizadorCtrl.multipaginas) ? false : true">Multipágina</span>
                         </div>
                         <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.cobros_online" ><span class="">Cobros Online</span>
+                            <input type="checkbox" ng-model="cotizadorCtrl.noticias" >
+                            <span class="" ng-click="cotizadorCtrl.noticias = (cotizadorCtrl.noticias) ? false : true">Noticias</span>
                         </div>
                         <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.imagenes_admin" ><span class="">Administración de Imágenes</span>
+                            <input type="checkbox" ng-model="cotizadorCtrl.usuarios" >
+                            <span class="" ng-click="cotizadorCtrl.usuarios = (cotizadorCtrl.usuarios) ? false : true">Usuarios</span>
+                        </div>
+                    </div>
+                    <div class="container-colum" style="flex: 1 1 auto;">
+                        <div class="controls controls-margin">
+                            <input type="checkbox" ng-model="cotizadorCtrl.ecommerce" >
+                            <span class="" ng-click="cotizadorCtrl.ecommerce = (cotizadorCtrl.ecommerce) ? false : true">Ecommerce</span>
+                        </div>
+                        <div class="controls controls-margin">
+                            <input type="checkbox" ng-model="cotizadorCtrl.chat" >
+                            <span class="" ng-click="cotizadorCtrl.chat = (cotizadorCtrl.chat) ? false : true">Chat en línea</span>
+                        </div>
+                        <div class="controls controls-margin">
+                            <input type="checkbox" ng-model="cotizadorCtrl.cobros_online" >
+                            <span class="" ng-click="cotizadorCtrl.cobros_online = (cotizadorCtrl.cobros_online) ? false : true">Cobros Online</span>
+                        </div>
+                        <div class="controls controls-margin">
+                            <input type="checkbox" ng-model="cotizadorCtrl.imagenes_admin" >
+                            <span class="" ng-click="cotizadorCtrl.imagenes_admin = (cotizadorCtrl.imagenes_admin) ? false : true">Administración de Imágenes</span>
                         </div>
                     </div>
                 </div>
@@ -184,13 +203,16 @@
                     </div>
                     <div class="container-colum" style="flex: 1 1 auto;">
                         <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.extension_1" ><span class="">.com / .net /</span>
+                            <input type="checkbox" ng-model="cotizadorCtrl.extension_1" >
+                            <span class="" ng-click="cotizadorCtrl.extension_1 = (cotizadorCtrl.extension_1) ? false : true">.com / .net /</span>
                         </div>
                         <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.extension_2" ><span class="">.com.ar / .org</span>
+                            <input type="checkbox" ng-model="cotizadorCtrl.extension_2" >
+                            <span class="" ng-click="cotizadorCtrl.extension_2 = (cotizadorCtrl.extension_2) ? false : true">.com.ar / .org</span>
                         </div>
                         <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.extension_3" ><span class="">otro</span>
+                            <input type="checkbox" ng-model="cotizadorCtrl.extension_3" >
+                            <span class="" ng-click="cotizadorCtrl.extension_3 = (cotizadorCtrl.extension_3) ? false : true">otro</span>
                         </div>
                     </div>
                     <div class="container-colum" style="flex: 1 1 auto;">
@@ -207,13 +229,16 @@
                 <div class="container-row">
                     <div class="container-colum" style="flex: 1 1 auto;">
                         <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.logotipo" ><span class="">Diseño de Logotipo</span>
+                            <input type="checkbox" ng-model="cotizadorCtrl.logotipo" >
+                            <span class="" ng-click="cotizadorCtrl.logotipo = (cotizadorCtrl.logotipo) ? false : true">Diseño de Logotipo</span>
                         </div>
                         <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.tarjeta" ><span class="">Tarjetas</span>
+                            <input type="checkbox" ng-model="cotizadorCtrl.tarjeta" >
+                            <span class="" ng-click="cotizadorCtrl.tarjeta = (cotizadorCtrl.tarjeta) ? false : true">Tarjetas</span>
                         </div>
                         <div class="controls controls-margin">
-                            <input type="checkbox" ng-model="cotizadorCtrl.catalogo" ><span class="">Catálogo</span>
+                            <input type="checkbox" ng-model="cotizadorCtrl.catalogo" >
+                            <span class="" ng-click="cotizadorCtrl.catalogo = (cotizadorCtrl.catalogo) ? false : true">Catálogo</span>
                         </div>
                     </div>
                     <div class="container-colum" style="flex: 1 1 auto;">
