Animación de los botones

--- a/app/mision/mision.html
+++ b/app/mision/mision.html
@@ -19,9 +19,10 @@
         una compa&ntilde;era y una herramienta. <strong>Nuestra misi&oacute;n es tu satisfacci&oacute;n.</strong>
       </p>
     </div>
-    <div class="back">
-      <div class="arrow-left"></div>
-      <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/#'});">Volver</a>
+    <div class="back-2">
+      <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/#'});">
+        <div class="arrow-left"></div> Volver
+      </a>
     </div>
   </div>
 </div>
