--- a/app/cotizador/cotizador.html
+++ b/app/cotizador/cotizador.html
@@ -286,9 +286,15 @@
             </div>
         </div>
 
-        <div class="btn-chat">
+        <!--div class="btn-chat">
             <div class="arrow-up arrow-chat-margin"></div>
             <button id="cotizar" ac-validator ng-click="cotizadorCtrl.sendMail();">Pedir Cotización</button>
+        </div-->
+        <div class="back-3">
+            <a href="" id="cotizar" ac-validator ng-click="cotizadorCtrl.sendMail();"
+               style="margin-top: 50px;">
+                <div class="arrow-up position-up"></div> Pedir Cotización
+            </a>
         </div>
 
         <div class="send-mail ac-mensaje-custom-show" ng-if="cotizadorCtrl.enviando">
