--- a/app/hacemos/hacemos.html
+++ b/app/hacemos/hacemos.html
@@ -62,9 +62,10 @@
         </div>
 
 
-        <div class="back">
-            <div class="arrow-left"></div>
-            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/main'});">Volver</a>
+        <div class="back-2">
+            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/#'});">
+                <div class="arrow-left"></div> Volver
+            </a>
         </div>
 
         <div class="slider-indicator">
