--- a/app/noticias/noticias.html
+++ b/app/noticias/noticias.html
@@ -6,10 +6,10 @@
             <label>Buscar:</label>
             <input type="text" class="buscar-control" style="width: 70%;"
                    ng-model="noticiasCtrl.filtro" ng-keyup="noticiasCtrl.buscarNoticia(noticiasCtrl.filtro);">
-            <div class="back" style="margin: 0">
+            <!--div class="back" style="margin: 0">
                 <div class="arrow-left"></div>
                 <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/main'});">Volver</a>
-            </div>
+            </div-->
         </div>
 
         <div class="slider-container-2" ng-if="!noticiasCtrl.buscar">
@@ -78,6 +78,12 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="back-2">
+            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/#'});">
+                <div class="arrow-left"></div> Volver
+            </a>
         </div>
 
         <div class="slider-indicator" ng-if="!noticiasCtrl.buscar">
