cambiar los <a> por <button>

--- a/app/chat/chat.html
+++ b/app/chat/chat.html
@@ -19,15 +19,10 @@
                     </div>
                 </div>
             </div>
-            <!--div class="btn-chat">
-                <div class="arrow-up arrow-chat-margin"></div>
-                <button id="contacto-enviar-mobile" ac-validator ng-click="chatCtrl.loginChat();">Ingresar</button>
-            </div-->
             <div class="back-3">
-                <a href="" id="contacto-enviar-mobile" ac-validator ng-click="chatCtrl.loginChat();"
-                   style="margin-top: 50px;">
-                    <div class="arrow-up position-up"></div> Ingresar
-                </a>
+                <button id="chat-login" ac-validator ng-click="chatCtrl.loginChat();">
+                    <div class="arrow-up position-up"></div>Ingresar
+                </button>
             </div>
             <div class="send-mail ac-mensaje-custom-show" ng-if="chatCtrl.enviando">
                 En breve se estará contactando alguien con usted
