--- a/app/contactanos/contacto.html
+++ b/app/contactanos/contacto.html
@@ -31,15 +31,10 @@
                     </div>
                 </div>
             </div>
-            <!--div class="btn-action" ng-disabled="contactoCtrl.enviando">
-                <div class="arrow-up arrow-contacto-margin"></div>
-                <button id="contacto-enviar-mobile" ac-validator ng-click="contactoCtrl.sendMail();">Enviar</button>
-            </div-->
             <div class="back-3">
-                <a href="" id="contacto-enviar-mobile" ac-validator ng-click="contactoCtrl.sendMail();"
-                   style="margin-top: 50px;">
+                <button id="enviar-consulta" ac-validator ng-click="contactoCtrl.sendMail();">
                     <div class="arrow-up position-up"></div> Enviar
-                </a>
+                </button>
             </div>
             <div class="send-mail ac-mensaje-custom-show" ng-if="contactoCtrl.enviando">
                 Su consulta fue enviada
