--- a/app/cotizador/cotizador.html
+++ b/app/cotizador/cotizador.html
@@ -286,15 +286,10 @@
             </div>
         </div>
 
-        <!--div class="btn-chat">
-            <div class="arrow-up arrow-chat-margin"></div>
-            <button id="cotizar" ac-validator ng-click="cotizadorCtrl.sendMail();">Pedir Cotización</button>
-        </div-->
         <div class="back-3">
-            <a href="" id="cotizar" ac-validator ng-click="cotizadorCtrl.sendMail();"
-               style="margin-top: 50px;">
+            <button id="enviar-cotizacion" ac-validator ng-click="cotizadorCtrl.sendMail();">
                 <div class="arrow-up position-up"></div> Pedir Cotización
-            </a>
+            </button>
         </div>
 
         <div class="send-mail ac-mensaje-custom-show" ng-if="cotizadorCtrl.enviando">
