--- a/app/sabias/sabias.html
+++ b/app/sabias/sabias.html
@@ -6,32 +6,40 @@
                 <button ng-click="sabiasCtrl.playMovie();"
                         ng-if="sabiasCtrl.show_btn" class="btn-movie">{{sabiasCtrl.btn_titulo}}</button>
 
-                <video id="video1" class="video-screen" width="320" height="240" ng-if="sabiasCtrl.movie == 1">
-                    <source src="movies/movie1.ogg" type="video/ogg" >
-                    <source src="movies/movie1.mov" type="video/mov" >
-                    <source src="movies/movie1.avi" type="video/avi" >
+                <video id="video1" class="video-screen" ng-if="sabiasCtrl.movie == 1">
+                    <source src="movies/movie1.mp4" type="video/mp4" >
+                    <source src="movies/movie1.webm" type="video/webm" >
+                    <source src="movies/movie1.ogv" type="video/ogg" >
                     Your browser does not support the <code>video</code> element.
                 </video>
 
                 <video id="video2" class="video-screen" ng-if="sabiasCtrl.movie == 2">
-                    <source src="movies/movie2.mov" >
+                    <source src="movies/movie2.mp4" type="video/mp4" >
+                    <source src="movies/movie2.webm" type="video/webm" >
+                    <source src="movies/movie2.ogv" type="video/ogg" >
                     Your browser does not support the <code>video</code> element.
                 </video>
 
                 <video id="video3" class="video-screen" ng-if="sabiasCtrl.movie == 3">
-                    <source src="movies/movie3.mov" >
+                    <source src="movies/movie3.mp4" type="video/mp4" >
+                    <source src="movies/movie3.webm" type="video/webm" >
+                    <source src="movies/movie3.ogv" type="video/ogg" >
                     Your browser does not support the <code>video</code> element.
                 </video>
 
-                <video id="video4" class="video-screen" ng-if="sabiasCtrl.movie == 4">
-                    <source src="movies/movie4.mov" >
+                <!--video id="video4" class="video-screen" ng-if="sabiasCtrl.movie == 4">
+                    <source src="movies/movie1.mp4" type="video/mp4" >
+                    <source src="movies/movie1.webm" type="video/webm" >
+                    <source src="movies/movie1.ogv" type="video/ogg" >
                     Your browser does not support the <code>video</code> element.
                 </video>
 
                 <video id="video5" class="video-screen" ng-if="sabiasCtrl.movie == 5">
-                    <source src="movies/movie5.mov" >
+                    <source src="movies/movie1.mp4" type="video/mp4" >
+                    <source src="movies/movie1.webm" type="video/webm" >
+                    <source src="movies/movie1.ogv" type="video/ogg" >
                     Your browser does not support the <code>video</code> element.
-                </video>
+                </video-->
 
                 <!--video id="video6" class="video-screen" ng-if="sabiasCtrl.movie == 6">
                     <source src="http://v2v.cc/~j/theora_testsuite/320x240.ogg" >
@@ -52,10 +60,10 @@
                      ng-click="sabiasCtrl.nextMovie(2);" ></div>
                 <div class="slider_3" ng-class="{slider_selected:sabiasCtrl.movie==3}"
                      ng-click="sabiasCtrl.nextMovie(3);" ></div>
-                <div class="slider_4" ng-class="{slider_selected:sabiasCtrl.movie==4}"
+                <!--div class="slider_4" ng-class="{slider_selected:sabiasCtrl.movie==4}"
                      ng-click="sabiasCtrl.nextMovie(4);" ></div>
                 <div class="slider_5" ng-class="{slider_selected:sabiasCtrl.movie==5}"
-                     ng-click="sabiasCtrl.nextMovie(5);" ></div>
+                     ng-click="sabiasCtrl.nextMovie(5);" ></div-->
                 <!--div class="slider_6" ng-class="{slider_selected:sabiasCtrl.movie==6}"
                      ng-click="sabiasCtrl.nextMovie(6);" ></div>
                 <div class="slider_7" ng-class="{slider_selected:sabiasCtrl.movie==7}"
